Issue 6998044: SITE-1249: Property descriptions are truncated in schema editor

--- a/trunk/www/schema/css/schema.less
+++ b/trunk/www/schema/css/schema.less
@@ -730,3 +730,9 @@ Decision Map
   border: 1px solid #f1daa9;
   .rounded_corners();
 }
+
+
+
+td.description p {
+  white-space: normal !important;
+}
